// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly Expense Summary with 1  data 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     tottaling 
    $123,123.00
  </h1>
</div>
`;

exports[`Should render correctly Expense Summary with multiple data 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     tottaling 
    $12,311,123.00
  </h1>
</div>
`;
